--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <img src="img.jpg" alt="Profile Picture" style="width: 180; height: 250;" class="profile-img">
+  <img src="img.jpg" alt="Profile Picture" style="width: 180px; height: 250px;" class="profile-img">
 
   <h1>My name is Parun Chumnankul</h1>
 
