--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="styles.css"> <!-- External CSS -->
 </head>
 <body>
-
+<div class="container">
   <img src="img.jpg" alt="Profile Picture" class="profile-img">
-
+</div>
   <h1>My name is Parun Chumnankul</h1>
   <hr>
   <h2>Skill</h2>
