--- a/index.html
+++ b/index.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Parun Chumnankul</title>
-  <link rel="stylesheet" href="styles.css"> <!-- External CSS -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<div class="container">
-  <img src="img.jpg" alt="Profile Picture" class="profile-img">
-</div>
-  <h1>My name is Parun Chumnankul</h1>
-  <hr>
-  <h2>Skill</h2>
-  <ul>
-    <li>Python</li>
-  </ul>
-  <hr>
-  <h3>
-    <a href="https://www.skn.ac.th/" target="_blank">Suankularb Wittayalai Nonthaburi School</a>
-  </h3>
 
-  <a href="contact.html">Contact</a>
-  <hr>
-  <table border="1">
+  <!-- Profile Info Table -->
+  <table class="profile-table">
+    <tr>
+      <!-- Left: Image -->
+      <td class="profile-img-cell">
+        <img src="img.jpg" alt="Profile Picture" class="profile-img" />
+      </td>
+
+      <!-- Right: Info -->
+      <td class="profile-info-cell">
+        <h1>Parun Chumnankul</h1>
+        <hr />
+        <h2>Skills</h2>
+        <ul>
+          <li>Python</li>
+        </ul>
+        <hr />
+        <h3>
+          <a href="https://www.skn.ac.th/" target="_blank">Suankularb Wittayalai Nonthaburi School</a>
+        </h3>
+        <p><a href="contact.html">Contact</a></p>
+        <hr />
+      </td>
+    </tr>
+  </table>
+
+  <!-- Your original table below (unchanged) -->
+  <table class="education-table" border="1">
     <thead>
       <tr>
         <th>Year</th>
